--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-12 col-md-10 offset-md-1">
                 <div class="header__inner">
-                    <a href="index" class="header__logo"><img src="images/logo.svg" alt="Logo"
+                    <a href="/" class="header__logo"><img src="images/logo.svg" alt="Logo"
                                                                    class="header__logo"></a>
                     <button class="header__btn">
                         <span class="header__btn-line"></span>
@@ -50,7 +50,7 @@
                             <span class="header__btn-line"></span>
                         </button>
                         <ul>
-                            <li><a href="index">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="manifest">Manifest</a></li>
                             <li>
                                 <span>Programma <i class="fas fa-angle-down"></i></span>
@@ -105,7 +105,7 @@
         <div class="row">
             <div class="col-12 col-md-10 offset-md-1">
                 <div class="footer__inner">
-                    <a href="index" class="footer__logo"><img src="images/logo.svg" alt="Logo" class="footer__logo-img"></a>
+                    <a href="/" class="footer__logo"><img src="images/logo.svg" alt="Logo" class="footer__logo-img"></a>
                     <div class="footer__info">
                         <div class="footer__info-group">
                             <h4 class="mb-3">Adres</h4>
