Added tech talks page

--- a/programma.html
+++ b/programma.html
@@ -65,10 +65,18 @@
                                 <span>Programma <i class="fas fa-angle-down"></i></span>
                                 <ul>
                                     <li><a href="programma">Studieprogramma</a></li>
-                                    <li><a href="https://www.notion.so/bitacademy/Bit-Academy-Guide-071d67a67c6740c7af3a1f168f1f2418" target="_blank" rel="nofollow">Studiegids</a></li>
+                                    <li>
+                                        <a href="https://www.notion.so/bitacademy/Bit-Academy-Guide-071d67a67c6740c7af3a1f168f1f2418"
+                                           target="_blank" rel="nofollow">Studiegids</a></li>
                                 </ul>
                             </li>
                             <li><a href="events">Events</a></li>
+                            <li>
+                                <span>Bedrijven <i class="fas fa-angle-down"></i></span>
+                                <ul>
+                                    <li><a href="tech-talks">Tech Talks</a></li>
+                                </ul>
+                            </li>
                             <li><a href="contact">Contact</a></li>
                         </ul>
                     </nav>
