--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,7 @@
         <div class="row">
             <div class="col-12 col-md-10 offset-md-1">
                 <div class="header__inner">
-                    <a href="/" class="header__logo"><img src="images/logo.svg" alt="Logo"
-                                                                   class="header__logo"></a>
+                    <a href="/" class="header__logo"><img src="images/logo.svg" alt="Logo" class="header__logo"></a>
                     <button class="header__btn">
                         <span class="header__btn-line"></span>
                         <span class="header__btn-line"></span>
@@ -74,6 +73,12 @@
                                 </ul>
                             </li>
                             <li><a href="events">Events</a></li>
+                            <li>
+                                <span>Bedrijven <i class="fas fa-angle-down"></i></span>
+                                <ul>
+                                    <li><a href="tech-talks">Tech Talks</a></li>
+                                </ul>
+                            </li>
                             <li><a href="contact">Contact</a></li>
                         </ul>
                     </nav>
