--- a/manifest.html
+++ b/manifest.html
@@ -110,15 +110,14 @@
                                 <img src="images/i-learn-doing.svg" alt="Icon">
                             </div>
                             <h3 class="mb-2 mt-3">Learning by doing</h3>
-                            <p>Goed worden in programmeren? Dan moet je het gewoon heel veel doen! Bij ons ben je daarom de hele dag bezig met programmeren. Zo kan je je echt verdiepen in de materie. </p>
+                            <p>Goed worden in programmeren? Dan moet je het heel veel doen! Bij ons ben je daarom de hele dag bezig met coderen. Alleen zo word je een programmeur. </p>
                         </div>
                         <div class="col-12 col-md-4 manifest__item">
                             <div class="manifest__item-media">
                                 <img src="images/i-peer-peer.svg" alt="Icon">
                             </div>
-                            <h3 class="mb-2 mt-3">Peer to peer</h3>
-                            <p>Leren doe je samen, niet alleen. Bij ons help je elkaar door vragen van elkaar te beantwoorden en elkaars werk na te kijken. Zo is er niet maar 1 coach die je kan helpen, maar zijn
-                            er 100+ mensen bij wie je terecht kan met vragen!</p>
+                            <h3 class="mb-2 mt-3">Bedrijfsleven</h3>
+                            <p>Aansluiting bij het bedrijfslevens staat centraal, daarom hebben we coaches uit het werkveld en doen we echte projecten. Zo leer je de vaardigheden waarmee je direct een de slag kan. </p>
                         </div>
                     </div>
                     <div class="row">
@@ -139,7 +138,7 @@
                         </div>
                         <div class="col-12 col-md-6">
                             <p>Tussen Bit en de Bit Academy wordt intens samengewerkt. Bit is actief met de laatste technologieën en deze kennis gebruiken wij vervolgens bij de Bit Academy om de studenten
-                                te laten werken met cutting-edge technieken. Daarom is IT bij ons geen geschiedenisles, maar vooruitkijken naar de toekomst.  </p>
+                                te laten werken met cutting-edge technieken. Daarom is tech bij ons geen geschiedenisles, maar vooruitkijken naar de toekomst.  </p>
                         </div>
                     </div>
                     <div class="row pt-5">
@@ -147,7 +146,7 @@
                             <h2 class="h2--xl">Kies je eigen pad</h2>
                         </div>
                         <div class="col-12 col-md-8 col-lg-6 mb-5 mb-md-0">
-                            <p>Binnen ons vakgebied zijn er veel specialisaties, en iedere programmeur heeft zijn/haar voorkeur en soms ook een afkeur tegen die andere richtingen. Verplicht technieken moeten leren
+                            <p>Binnen ons vakgebied zijn er veel specialisaties, en iedere programmeur heeft zijn of haar voorkeur. Verplicht technieken moeten leren
                             waarvan je weet dat je er toch niets mee gaat doen is zonde van de tijd en energie. Bij ons kan je daarom je eigen pad kiezen en precies de onderwerpen kiezen die jij
                             leuk vindt om te leren*. </p>
                         </div>
