--- a/programma.html
+++ b/programma.html
@@ -95,30 +95,31 @@
                             <h1 class="mb-5 mb-md-4 u-hyphens">Programma</h1>
                         </div>
                         <div class="col-12 col-md-10 col-lg-9 col-xl-8">
-                            <p>Het programma van de Bit Academy bestaat uit allemaal verschillende modules waar je op je eigen tempo doorheen kan. Zo kan je bijvoorbeeld kiezen of je wilt beginnen met PHP, Git of HTML/CSS. Sommige exercises
-                            moet je zelfstandig maken, anderen met een team van 2 t/m 4 studenten. Bij elke module leer je nieuwe vaardigheden zodat je uiteindelijk een complete programmeur wordt. </p>
+                            <p>Het programma van de Bit Academy bestaat uit allemaal verschillende modules waar je op een eigen tempo doorheen kan. Zo kan je bijvoorbeeld kiezen of je wilt beginnen met PHP, Git of HTML/CSS. Sommige exercises
+                            moet je zelfstandig maken, anderen met een team. Bij elke module leer je nieuwe vaardigheden, zodat je uiteindelijk een complete programmeur wordt. </p>
                         </div>
                     </div>
                     <div class="row programme__main">
                         <div class="col-12">
                             <img src="images/programme-1.svg" alt="Programma" class="programme__main-img--1">
                             <div class="programme__box">
-                                <h2 class="h2--lg mb-4">Eind jaar 1</h2>
+                                <h2 class="h2--lg mb-4">The fundamentals</h2>
                                 <p>Als je op het reguliere tempo door de opleiding gaat is na `Project 3` het eerste jaar afgelopen. Als we
                                 terug kijken naar het afgelopen jaar heb je al gigantisch veel geleerd: PHP, Git, HTML/CSS, Javascript, Scrum, Databases, feedback geven en communiceren met een klant. </p>
                             </div>
                             <img src="images/programme-2.svg" alt="Programma" class="programme__main-img--2">
                             <div class="programme__box">
-                                <h2 class="h2--lg mb-4">Eind jaar 2</h2>
-                                <p>Dit jaar ben je begonnen met je stage. 20 weken meedraaien in een echte organistie. Tijdens je stage scherp je je vaardigheden aan en kom je 1 dag per week terug naar onze locatie
-                                om te werken aan je softskils. Daarnaast ben je bezig geweest met geadvanceerde programmeer onderwerpen zoals Object Oriented Programming, Security en Testing. Het jaar sluit je af met een project
+                                <h2 class="h2--lg mb-4">Advanced</h2>
+                                <p>Dit jaar ben je begonnen met je stage. 20 weken meedraaien in een echte organistie. Je vaardigheden zijn aangescherpt tijdens je stage. Je hebt 1 dag per maand op onze locatie gewerkt aan je softskills.
+                                    Daarnaast ben je bezig geweest met geavanceerde programmeer onderwerpen zoals Object Oriented Programming, Security en Testing. Het jaar sluit je af met een project
                                 van 8 weken voor een externe opdrachtgever.</p>
                             </div>
                             <img src="images/programme-3.svg" alt="Programma" class="programme__main-img--3">
                             <div class="programme__box">
-                                <h2 class="h2--lg mb-4">Eind jaar 3</h2>
+                                <h2 class="h2--lg mb-4">Done!</h2>
                                 <p>En dan ben je alweer afgestudeerd! <br/><br/>In jaar 3 heb je gekozen voor de track 'Embedded design' waarin je op een Arduino je eigen Tamagotchi moest bouwen of voor 'Game Development', waarin
-                                je de eerste stappen hebt gezet om de volgende Fortnite / Pokemon te bouwen. Daarnaast heb je je eindexamens gemaakt en loop je als afsluiting op je school carriere nog 20 weken stage. </p>
+                                je de eerste stappen hebt gezet om de volgende Fortnite of Pokemon te bouwen. Je hebt je eindexamens gemaakt en als afsluiting op je school carrière 20 weken stage gelopen. <br/><br/>Je kunt met zelfvertrouwens
+                                starten bij je eerste baan of doorstuderen aan het HBO.</p>
                             </div>
                         </div>
                     </div>
