--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                                 </div>
                                 <div class="col-10 offset-1 col-md-8 offset-md-0">
                                     <p class="mb-4 pb-2 pb-md-0">
-                                        Binnen de Bit Academy werk je op je eigen tempo en kies je een eigen pad. Wij
+                                        Binnen de Bit Academy werk je op je eigen tempo en kies je een eigen leerroute. Wij
                                         hebben
                                         geen klassikale lessen of 'roosters'. Je doet het samen, met elkaar. Je
                                         bent 3 dagen
                                         per week, van 09:30 - 16:00, bij ons op locatie bezig met het bouwen van toffe
-                                        tech oplossingen. Je kiest zelfstandig je eigen pad en bepaald je eigen tempo. Zo
+                                        tech oplossingen. Je kiest zelfstandig je eigen leerroute en bepaald je eigen tempo. Zo
                                         leer je stapje voor stapje programmeren.
                                         Benieuwd wat je allemaal leert?
                                     </p>
@@ -221,12 +221,10 @@
                             <img src="images/i-peer.svg" alt="Icon" class="w-100">
                         </div>
                         <div class="col-12 col-md-8">
-                            <p>Iedereen werkt op zijn eigen tempo en kiest zijn eigen pad. Hierdoor is het niet mogelijk
-                                om klassikaal les te geven. Het is
-                                des te belangrijker dat de studenten elkaar helpen. Samen kan je meer dan alleen. Als je
-                                straks bent afgestudeerd, is er geen docent meer. Dan
-                                moet je leren van je collega's. Wij leren je dit alvast aan. Bij ons kijk je
-                                bijvoorbeeld je mede studenten na, zodat je ze vervolgens verder kan helpen.</p>
+                            <p>In plaats van één coach heb je er tientallen. Bij peer to peer learning
+                                leer je vooral van je studiegenoten. Je leert feedback geven, communiceren en
+                                andere nakijken. Je leert iets immer het beste door het aan iemand anders uit te leggen.
+</p>
                         </div>
                     </div>
                 </div>
@@ -238,9 +236,9 @@
                         </div>
                         <div class="col-12 col-md-8">
                             <p>Je leert iets pas echt in de praktijk. Bij ons ga je daarom zo snel mogelijk aan de slag
-                                voor echte opdrachtgevers. Echte opdrachtgevers met echte projecten.
+                                voor echte opdrachtgevers met echte projecten.
                                 Dit doe je in groepen van 2 - 4 studenten. Dit betekent misschien wel dat je allemaal
-                                nieuwe technieken moet gaan gebruiken die je nog niet kent, dus net als in de
+                                nieuwe technieken moet gaan gebruiken die je nog niet kent, net als in de
                                 praktijk.</p>
                         </div>
                     </div>
@@ -252,8 +250,7 @@
                             <img src="images/i-rythm.svg" alt="Icon" class="w-100">
                         </div>
                         <div class="col-12 col-md-8">
-                            <p>Wij geloven dat iedereen op een ander tempo werkt en dat je dus op je eigen tempo moet
-                                kunnen werken. Daarom is ons curriculum zo ingericht dat je zelf je tempo kan bepalen.
+                            <p>Iedereen werkt op zijn eigen tempo en kiest zijn eigen leerroute. Iedereen werkt op een ander tempo. Daarom is ons curriculum zo ingericht dat je een eigen tempo kan bepalen.
                                 Wil je sneller? Dat kan altijd!. Wil je liever iets vertragen? Ook geen probleem. </p>
                         </div>
                     </div>
