--- a/events.html
+++ b/events.html
@@ -100,19 +100,6 @@
                     <div class="row events__list">
                         <div class="col-12 col-md-6">
                             <div class="events__item">
-                                <img src="images/tryout.jpg" alt="Event image" class="events__item-img">
-                                <div class="d-flex align-items-center justify-content-between">
-                                    <h2 class="h2--lg">Tryout dag</h2>
-                                    <div class="tag">25 feb</div>
-                                </div>
-                                <p class="p--lg events__item-info">Science Park 608A | 09:30 - 12:30</p>
-                                <p>Benieuwd of de Bit Academy iets voor jou is? Kom een ochtend met ons meelopen! Op deze tryout ervaar je hoe we op de Bit Academy werken / leren en krijg je een
-                                beter beeld van de locatie. </p>
-                                <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow" class="btn events__item-btn"><span>Meld je aan!</span></a>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="events__item">
                                 <img src="images/opendag.png" alt="Event image" class="events__item-img">
                                 <div class="d-flex align-items-center justify-content-between">
                                     <h2 class="h2--lg">Open dag</h2>
@@ -135,6 +122,19 @@
                                 <p>Benieuwd of de Bit Academy iets voor jou is? Kom een ochtend met ons meelopen! Op deze tryout ervaar je hoe we op de Bit Academy werken / leren en krijg je een
                                     beter beeld van de locatie. </p>
                                 <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow" class="btn events__item-btn"><span>Meld je aan!</span></a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="events__item past">
+                                <img src="images/tryout.jpg" alt="Event image" class="events__item-img">
+                                <p class="finished">Afgelopen</p>
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <h2 class="h2--lg">Tryout dag</h2>
+                                    <div class="tag">25 feb</div>
+                                </div>
+                                <p class="p--lg events__item-info">Science Park 608A | 09:30 - 12:30</p>
+                                <p>Benieuwd of de Bit Academy iets voor jou is? Kom een ochtend met ons meelopen! Op deze tryout ervaar je hoe we op de Bit Academy werken / leren en krijg je een
+                                    beter beeld van de locatie. </p>
                             </div>
                         </div>
                     </div>
