Added talent day event

--- a/events.html
+++ b/events.html
@@ -125,6 +125,19 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6">
+                            <div class="events__item">
+                                <img src="images/talent-day.jpg" alt="Event image" class="events__item-img">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <h2 class="h2--lg">Talent dag</h2>
+                                    <div class="tag">17 apr</div>
+                                </div>
+                                <p class="p--lg events__item-info">Science Park 608A | 13:00 - 15:00</p>
+                                <p>Is jou organisatie opzoek naar het aankomende tech talent? Kom dan speeddaten met onze talenten tijdens de Bit Academy Talent Day. Hier ontmoet je je
+                                volgende collega!</p>
+                                <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow" class="btn events__item-btn"><span>Meld je aan!</span></a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
                             <div class="events__item past">
                                 <img src="images/tryout.jpg" alt="Event image" class="events__item-img">
                                 <p class="finished">Afgelopen</p>
