Added afgelasten events

--- a/events.html
+++ b/events.html
@@ -100,7 +100,21 @@
                     <div class="row events__list">
                         <div class="col-12 col-md-6">
                             <div class="events__item">
+                                <img src="images/talent-day.jpg" alt="Event image" class="events__item-img">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <h2 class="h2--lg">Talent dag</h2>
+                                    <div class="tag">17 apr</div>
+                                </div>
+                                <p class="p--lg events__item-info">Science Park 608A | 13:00 - 15:00</p>
+                                <p>Is jou organisatie opzoek naar het aankomende tech talent? Kom dan speeddaten met onze talenten tijdens de Bit Academy Talent Day. Hier ontmoet je je
+                                    volgende collega!</p>
+                                <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow" class="btn events__item-btn"><span>Meld je aan!</span></a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="events__item past">
                                 <img src="images/opendag.png" alt="Event image" class="events__item-img">
+                                <p class="finished">Afgelast</p>
                                 <div class="d-flex align-items-center justify-content-between">
                                     <h2 class="h2--lg">Open dag</h2>
                                     <div class="tag">14 mrt</div>
@@ -112,8 +126,9 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6">
-                            <div class="events__item">
+                            <div class="events__item past">
                                 <img src="images/tryout-2.jpg" alt="Event image" class="events__item-img">
+                                <p class="finished">Afgelast</p>
                                 <div class="d-flex align-items-center justify-content-between">
                                     <h2 class="h2--lg">Tryout dag</h2>
                                     <div class="tag">19 mrt</div>
@@ -121,19 +136,6 @@
                                 <p class="p--lg events__item-info">Science Park 608A | 09:30 - 12:30</p>
                                 <p>Benieuwd of de Bit Academy iets voor jou is? Kom een ochtend met ons meelopen! Op deze tryout ervaar je hoe we op de Bit Academy werken / leren en krijg je een
                                     beter beeld van de locatie. </p>
-                                <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow" class="btn events__item-btn"><span>Meld je aan!</span></a>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="events__item">
-                                <img src="images/talent-day.jpg" alt="Event image" class="events__item-img">
-                                <div class="d-flex align-items-center justify-content-between">
-                                    <h2 class="h2--lg">Talent dag</h2>
-                                    <div class="tag">17 apr</div>
-                                </div>
-                                <p class="p--lg events__item-info">Science Park 608A | 13:00 - 15:00</p>
-                                <p>Is jou organisatie opzoek naar het aankomende tech talent? Kom dan speeddaten met onze talenten tijdens de Bit Academy Talent Day. Hier ontmoet je je
-                                volgende collega!</p>
                                 <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow" class="btn events__item-btn"><span>Meld je aan!</span></a>
                             </div>
                         </div>
