--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 order-md-1">
-                    <a href="https://bitstudents.typeform.com/to/KaBIQm" target="_blank" rel="nofollow"
+                    <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy" target="_blank" rel="nofollow"
                        class="btn px-md-0 w-md-100"><span>Meld je aan!</span></a>
                 </div>
             </div>
