Moved talent day date

--- a/events.html
+++ b/events.html
@@ -103,7 +103,7 @@
                                 <img src="images/talent-day.jpg" alt="Event image" class="events__item-img">
                                 <div class="d-flex align-items-center justify-content-between">
                                     <h2 class="h2--lg">Talent dag</h2>
-                                    <div class="tag">17 apr</div>
+                                    <div class="tag">Datum nog niet bekend</div>
                                 </div>
                                 <p class="p--lg events__item-info">Science Park 608A | 13:00 - 15:00</p>
                                 <p>Is jou organisatie opzoek naar het aankomende tech talent? Kom dan speeddaten met onze talenten tijdens de Bit Academy Talent Day. Hier ontmoet je je
