Added 'looking for bit?' indicator

--- a/tech-talks.html
+++ b/tech-talks.html
@@ -48,6 +48,11 @@
 </head>
 
 <body>
+<div class="looking-for-bit">
+    <p>Looking for Bit? <br/><img src="images/arrow.png" alt=""></p>
+
+    <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
+</div>
 
 <header class="header">
     <div class="container">
@@ -127,78 +132,97 @@
                 <div class="card">
                     <div class="card-header" id="headingOne">
                         <h2 class="mb-0">
-                            <button class="btn-accordion" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="btn-accordion" type="button" data-toggle="collapse"
+                                    data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 Hoelaat zijn de tech talks?
                             </button>
 
                         </h2>
                     </div>
 
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                         data-parent="#accordionExample">
                         <div class="card-body">
-                            De tech talk begint om 10:00 zodat het binnen de reguliere schooltijd van de studenten valt. Daarnaast hebben de studenten op deze tijd het optimale concentratie niveau om kennis tot zich te nemen.
+                            De tech talk begint om 10:00 zodat het binnen de reguliere schooltijd van de studenten valt.
+                            Daarnaast hebben de studenten op deze tijd het optimale concentratie niveau om kennis tot
+                            zich te nemen.
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingTwo">
                         <h2 class="mb-0">
-                            <button class="btn-accordion" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                            <button class="btn-accordion" type="button" data-toggle="collapse"
+                                    data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                                 Mag ik de naam van mijn bedrijf noemen?
                             </button>
 
                         </h2>
                     </div>
 
-                    <div id="collapseTwo" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapseTwo" class="collapse show" aria-labelledby="headingOne"
+                         data-parent="#accordionExample">
                         <div class="card-body">
-                            Ja zeker, graag zelfs! Dan krijgen de studenten alvast een positieve connectie met je organisatie. Het is echter niet de bedoeling dat de tech talk wordt gebruikt om het bedrijf actief te promoten / een product te verkopen. Als de sessie tof genoeg is, onthouden de studenten je vanzelf!
+                            Ja zeker, graag zelfs! Dan krijgen de studenten alvast een positieve connectie met je
+                            organisatie. Het is echter niet de bedoeling dat de tech talk wordt gebruikt om het bedrijf
+                            actief te promoten / een product te verkopen. Als de sessie tof genoeg is, onthouden de
+                            studenten je vanzelf!
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingThree">
                         <h2 class="mb-0">
-                            <button class="btn-accordion" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                            <button class="btn-accordion" type="button" data-toggle="collapse"
+                                    data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                                 Hoelang duurt een tech talk?
                             </button>
 
                         </h2>
                     </div>
 
-                    <div id="collapseThree" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapseThree" class="collapse show" aria-labelledby="headingOne"
+                         data-parent="#accordionExample">
                         <div class="card-body">
-                            Een tech talk duurt tussen de 30 en 45 minuten. Korter is prima, langer niet. Dit heeft te maken met de concentratieboog van de studenten. Wij adviseren om maximaal 30 minuten te presenteren en 15 minuten te reserveren voor vragen / nabespreken.
+                            Een tech talk duurt tussen de 30 en 45 minuten. Korter is prima, langer niet. Dit heeft te
+                            maken met de concentratieboog van de studenten. Wij adviseren om maximaal 30 minuten te
+                            presenteren en 15 minuten te reserveren voor vragen / nabespreken.
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingFour">
                         <h2 class="mb-0">
-                            <button class="btn-accordion" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                            <button class="btn-accordion" type="button" data-toggle="collapse"
+                                    data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                                 Wat is het niveau van de studenten?
                             </button>
 
                         </h2>
                     </div>
 
-                    <div id="collapseFour" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapseFour" class="collapse show" aria-labelledby="headingOne"
+                         data-parent="#accordionExample">
                         <div class="card-body">
-                            Het niveau van de studenten is erg gevarieerd. Er zijn namelijk eerste, tweede en derde jaars studenten. De studenten hebben allemaal een basis kennis van programmeren. Desondanks is het beter om bij je tech talk de basis van een onderwerp ook te behandelen.
+                            Het niveau van de studenten is erg gevarieerd. Er zijn namelijk eerste, tweede en derde
+                            jaars studenten. De studenten hebben allemaal een basis kennis van programmeren. Desondanks
+                            is het beter om bij je tech talk de basis van een onderwerp ook te behandelen.
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingFive">
                         <h2 class="mb-0">
-                            <button class="btn-accordion" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                            <button class="btn-accordion" type="button" data-toggle="collapse"
+                                    data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
                                 Hoeveel studenten kan ik verwachten?
                             </button>
 
                         </h2>
                     </div>
 
-                    <div id="collapseFive" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapseFive" class="collapse show" aria-labelledby="headingOne"
+                         data-parent="#accordionExample">
                         <div class="card-body">
                             +- 40 studenten
                         </div>
@@ -207,48 +231,59 @@
                 <div class="card">
                     <div class="card-header" id="headingSix">
                         <h2 class="mb-0">
-                            <button class="btn-accordion" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                            <button class="btn-accordion" type="button" data-toggle="collapse"
+                                    data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
                                 Welke onderwerpen kan ik behandelen?
                             </button>
 
                         </h2>
                     </div>
 
-                    <div id="collapseSix" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapseSix" class="collapse show" aria-labelledby="headingOne"
+                         data-parent="#accordionExample">
                         <div class="card-body">
-                            Alles! Zolang het maar aansluit bij de studenten. Dat betekent dat niet alleen tech onderwerpen welkom zijn maar ook onderwerpen zoals communicatie, presenteren of bedrijfscultuur.
+                            Alles! Zolang het maar aansluit bij de studenten. Dat betekent dat niet alleen tech
+                            onderwerpen welkom zijn maar ook onderwerpen zoals communicatie, presenteren of
+                            bedrijfscultuur.
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingSeven">
                         <h2 class="mb-0">
-                            <button class="btn-accordion" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
+                            <button class="btn-accordion" type="button" data-toggle="collapse"
+                                    data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
                                 Krijg ik een financiële vergoeding?
                             </button>
 
                         </h2>
                     </div>
 
-                    <div id="collapseSeven" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapseSeven" class="collapse show" aria-labelledby="headingOne"
+                         data-parent="#accordionExample">
                         <div class="card-body">
-                            Nee, wij zijn een beginnende onderwijs instelling en kunnen u dit daarom helaas niet bieden. U heeft de kans om in een vroeg stadium uw merk kenbaar te maken bij gemotiveerde en getalenteerde studenten, wij gaan ervan uit dat dit genoeg voor u is.
+                            Nee, wij zijn een beginnende onderwijs instelling en kunnen u dit daarom helaas niet bieden.
+                            U heeft de kans om in een vroeg stadium uw merk kenbaar te maken bij gemotiveerde en
+                            getalenteerde studenten, wij gaan ervan uit dat dit genoeg voor u is.
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingEight">
                         <h2 class="mb-0">
-                            <button class="btn-accordion" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
+                            <button class="btn-accordion" type="button" data-toggle="collapse"
+                                    data-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
                                 Hoe ziet de ruimte eruit / welke faciliteiten zijn er?
                             </button>
 
                         </h2>
                     </div>
 
-                    <div id="collapseEight" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapseEight" class="collapse show" aria-labelledby="headingOne"
+                         data-parent="#accordionExample">
                         <div class="card-body">
-                            We hebben een grote open ruimte waarin de studenten op een tribune zitten. Voorin de ruimte staat een grote tv waar je je laptop op aan kan sluiten.
+                            We hebben een grote open ruimte waarin de studenten op een tribune zitten. Voorin de ruimte
+                            staat een grote tv waar je je laptop op aan kan sluiten.
                         </div>
                     </div>
                 </div>
@@ -271,7 +306,7 @@
                     <div class="footer__info">
                         <div class="footer__info-group">
                             <h4 class="mb-3">Adres</h4>
-                                <p>Amsterdam
+                            <p>Amsterdam
                                 <br>Science Park 608A
                                 <br>1098XH, Amsterdam</p>
                         </div>
