--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./favicon.ico" sizes="16x16" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" sizes="16x16" type="image/x-icon">
 
-    <script src="js/fontawesome.js" ></script>
+    <script src="js/fontawesome.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -22,26 +22,38 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157814288-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
-        gtag('config', 'UA-157814288-1',  { 'anonymize_ip': true });
+        gtag('config', 'UA-157814288-1', {'anonymize_ip': true});
     </script>
 
     <!-- Hotjar Tracking Code for www.bit-academy.nl -->
     <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:1680339,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {hjid: 1680339, hjsv: 6};
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
             a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
 </head>
 
 <body>
+<div class="looking-for-bit">
+    <p>Looking for Bit? <br/><img src="images/arrow.png" alt=""></p>
+
+    <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
+</div>
 
 <header class="header">
     <div class="container">
@@ -109,7 +121,8 @@
                             <br>Bit Academy B.V.
                             <br>Science Park 608A
                             <br>1098XH Amsterdam</p>
-                        <a href="https://www.google.nl/maps/dir//Science+Park+608,+1098+XH+Amsterdam/@52.3544095,4.9570223,17z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x47c6094ff4f599cd:0x2fcf0fe2869cfe06!2m2!1d4.959211!2d52.3544095!3e0" target="_blank" rel="nofollow" class="btn"><span>Plan je route</span></a>
+                        <a href="https://www.google.nl/maps/dir//Science+Park+608,+1098+XH+Amsterdam/@52.3544095,4.9570223,17z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x47c6094ff4f599cd:0x2fcf0fe2869cfe06!2m2!1d4.959211!2d52.3544095!3e0"
+                           target="_blank" rel="nofollow" class="btn"><span>Plan je route</span></a>
                     </div>
                 </div>
             </section>
