--- a/events.html
+++ b/events.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./favicon.ico" sizes="16x16" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" sizes="16x16" type="image/x-icon">
 
-    <script src="js/fontawesome.js" ></script>
+    <script src="js/fontawesome.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -22,26 +22,38 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157814288-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
-        gtag('config', 'UA-157814288-1',  { 'anonymize_ip': true });
+        gtag('config', 'UA-157814288-1', {'anonymize_ip': true});
     </script>
 
     <!-- Hotjar Tracking Code for www.bit-academy.nl -->
     <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:1680339,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {hjid: 1680339, hjsv: 6};
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
             a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
 </head>
 
 <body>
+<div class="looking-for-bit">
+    <p>Looking for Bit? <br/><img src="images/arrow.png" alt=""></p>
+
+    <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
+</div>
 
 <header class="header">
     <div class="container">
@@ -88,73 +100,78 @@
     </div>
 </header>
 
-    <main class="container">
-        <div class="row">
-            <div class="col-12 col-md-10 offset-md-1">
-                <section class="events">
-                    <div class="row mb-5">
-                        <div class="col-12">
-                            <h1>Events</h1>
+<main class="container">
+    <div class="row">
+        <div class="col-12 col-md-10 offset-md-1">
+            <section class="events">
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <h1>Events</h1>
+                    </div>
+                </div>
+                <div class="row events__list">
+                    <div class="col-12 col-md-6">
+                        <div class="events__item">
+                            <img src="images/talent-day.jpg" alt="Event image" class="events__item-img">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h2 class="h2--lg">Talent dag</h2>
+                                <div class="tag">Datum nog niet bekend</div>
+                            </div>
+                            <p class="p--lg events__item-info">Science Park 608A | 13:00 - 15:00</p>
+                            <p>Is jou organisatie opzoek naar het aankomende tech talent? Kom dan speeddaten met onze
+                                talenten tijdens de Bit Academy Talent Day. Hier ontmoet je je
+                                volgende collega!</p>
+                            <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow"
+                               class="btn events__item-btn"><span>Meld je aan!</span></a>
                         </div>
                     </div>
-                    <div class="row events__list">
-                        <div class="col-12 col-md-6">
-                            <div class="events__item">
-                                <img src="images/talent-day.jpg" alt="Event image" class="events__item-img">
-                                <div class="d-flex align-items-center justify-content-between">
-                                    <h2 class="h2--lg">Talent dag</h2>
-                                    <div class="tag">Datum nog niet bekend</div>
-                                </div>
-                                <p class="p--lg events__item-info">Science Park 608A | 13:00 - 15:00</p>
-                                <p>Is jou organisatie opzoek naar het aankomende tech talent? Kom dan speeddaten met onze talenten tijdens de Bit Academy Talent Day. Hier ontmoet je je
-                                    volgende collega!</p>
-                                <a href="https://bitstudents.typeform.com/to/IJzgtn" target="_blank" rel="nofollow" class="btn events__item-btn"><span>Meld je aan!</span></a>
+                    <div class="col-12 col-md-6">
+                        <div class="events__item past">
+                            <img src="images/opendag.png" alt="Event image" class="events__item-img">
+                            <p class="finished">Afgelast</p>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h2 class="h2--lg">Open dag</h2>
+                                <div class="tag">14 mrt</div>
                             </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="events__item past">
-                                <img src="images/opendag.png" alt="Event image" class="events__item-img">
-                                <p class="finished">Afgelast</p>
-                                <div class="d-flex align-items-center justify-content-between">
-                                    <h2 class="h2--lg">Open dag</h2>
-                                    <div class="tag">14 mrt</div>
-                                </div>
-                                <p class="p--lg events__item-info">Science Park 608A | 11:00 - 15:00</p>
-                                <p>Wil je een kijkje nemen bij ons op locatie? Benieuwd hoe ons pand eruit ziet en wat wij allemaal te bieden hebben? Kom naar onze open dag en vind het uit!
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="events__item past">
-                                <img src="images/tryout-2.jpg" alt="Event image" class="events__item-img">
-                                <p class="finished">Afgelast</p>
-                                <div class="d-flex align-items-center justify-content-between">
-                                    <h2 class="h2--lg">Tryout dag</h2>
-                                    <div class="tag">19 mrt</div>
-                                </div>
-                                <p class="p--lg events__item-info">Science Park 608A | 09:30 - 12:30</p>
-                                <p>Benieuwd of de Bit Academy iets voor jou is? Kom een ochtend met ons meelopen! Op deze tryout ervaar je hoe we op de Bit Academy werken / leren en krijg je een
-                                    beter beeld van de locatie. </p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="events__item past">
-                                <img src="images/tryout.jpg" alt="Event image" class="events__item-img">
-                                <p class="finished">Afgelopen</p>
-                                <div class="d-flex align-items-center justify-content-between">
-                                    <h2 class="h2--lg">Tryout dag</h2>
-                                    <div class="tag">25 feb</div>
-                                </div>
-                                <p class="p--lg events__item-info">Science Park 608A | 09:30 - 12:30</p>
-                                <p>Benieuwd of de Bit Academy iets voor jou is? Kom een ochtend met ons meelopen! Op deze tryout ervaar je hoe we op de Bit Academy werken / leren en krijg je een
-                                    beter beeld van de locatie. </p>
-                            </div>
+                            <p class="p--lg events__item-info">Science Park 608A | 11:00 - 15:00</p>
+                            <p>Wil je een kijkje nemen bij ons op locatie? Benieuwd hoe ons pand eruit ziet en wat wij
+                                allemaal te bieden hebben? Kom naar onze open dag en vind het uit!
+                            </p>
                         </div>
                     </div>
-                </section>
-            </div>
+                    <div class="col-12 col-md-6">
+                        <div class="events__item past">
+                            <img src="images/tryout-2.jpg" alt="Event image" class="events__item-img">
+                            <p class="finished">Afgelast</p>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h2 class="h2--lg">Tryout dag</h2>
+                                <div class="tag">19 mrt</div>
+                            </div>
+                            <p class="p--lg events__item-info">Science Park 608A | 09:30 - 12:30</p>
+                            <p>Benieuwd of de Bit Academy iets voor jou is? Kom een ochtend met ons meelopen! Op deze
+                                tryout ervaar je hoe we op de Bit Academy werken / leren en krijg je een
+                                beter beeld van de locatie. </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="events__item past">
+                            <img src="images/tryout.jpg" alt="Event image" class="events__item-img">
+                            <p class="finished">Afgelopen</p>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h2 class="h2--lg">Tryout dag</h2>
+                                <div class="tag">25 feb</div>
+                            </div>
+                            <p class="p--lg events__item-info">Science Park 608A | 09:30 - 12:30</p>
+                            <p>Benieuwd of de Bit Academy iets voor jou is? Kom een ochtend met ons meelopen! Op deze
+                                tryout ervaar je hoe we op de Bit Academy werken / leren en krijg je een
+                                beter beeld van de locatie. </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
-    </main>
+    </div>
+</main>
 
 <footer class="footer">
     <div class="container">
