--- a/index.html
+++ b/index.html
@@ -21,26 +21,38 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157814288-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
-        gtag('config', 'UA-157814288-1',  { 'anonymize_ip': true });
+        gtag('config', 'UA-157814288-1', {'anonymize_ip': true});
     </script>
 
     <!-- Hotjar Tracking Code for www.bit-academy.nl -->
     <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:1680339,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {hjid: 1680339, hjsv: 6};
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
             a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
 </head>
 
 <body>
+<div class="looking-for-bit">
+    <p>Looking for Bit? <br/><img src="images/arrow.png" alt=""></p>
+
+    <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
+</div>
 
 <header class="header">
     <div class="container">
@@ -109,7 +121,8 @@
                     </p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 order-md-1">
-                    <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy" target="_blank" rel="nofollow"
+                    <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
+                       target="_blank" rel="nofollow"
                        class="btn px-md-0 w-md-100"><span>Meld je aan!</span></a>
                 </div>
             </div>
@@ -155,12 +168,14 @@
                                 </div>
                                 <div class="col-10 offset-1 col-md-8 offset-md-0">
                                     <p class="mb-4 pb-2 pb-md-0">
-                                        Binnen de Bit Academy werk je op je eigen tempo en kies je een eigen leerroute. Wij
+                                        Binnen de Bit Academy werk je op je eigen tempo en kies je een eigen leerroute.
+                                        Wij
                                         hebben
                                         geen klassikale lessen of 'roosters'. Je doet het samen, met elkaar. Je
                                         bent 3 dagen
                                         per week, van 09:30 - 16:00, bij ons op locatie bezig met het bouwen van toffe
-                                        tech oplossingen. Je kiest zelfstandig je eigen leerroute en bepaald je eigen tempo. Zo
+                                        tech oplossingen. Je kiest zelfstandig je eigen leerroute en bepaald je eigen
+                                        tempo. Zo
                                         leer je stapje voor stapje programmeren.
                                         Benieuwd wat je allemaal leert?
                                     </p>
@@ -193,7 +208,8 @@
                                 <h3>Samenwerken</h3>
                                 <p>Alles wat je om je heen ziet is gemaakt door een team.
                                     Samenwerken is daarom een groot onderdeel van
-                                    onze manier van werken. Door goed te leren samenwerken, bouw jij mee aan de toekomst!</p>
+                                    onze manier van werken. Door goed te leren samenwerken, bouw jij mee aan de
+                                    toekomst!</p>
                             </div>
                         </div>
                         <div class="col-12 col-md-3">
@@ -224,7 +240,7 @@
                             <p>In plaats van één coach heb je er tientallen. Bij peer to peer learning
                                 leer je vooral van je studiegenoten. Je leert feedback geven, communiceren en
                                 andere nakijken. Je leert iets immer het beste door het aan iemand anders uit te leggen.
-</p>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -250,7 +266,8 @@
                             <img src="images/i-rythm.svg" alt="Icon" class="w-100">
                         </div>
                         <div class="col-12 col-md-8">
-                            <p>Iedereen werkt op zijn eigen tempo en kiest zijn eigen leerroute. Iedereen werkt op een ander tempo. Daarom is ons curriculum zo ingericht dat je een eigen tempo kan bepalen.
+                            <p>Iedereen werkt op zijn eigen tempo en kiest zijn eigen leerroute. Iedereen werkt op een
+                                ander tempo. Daarom is ons curriculum zo ingericht dat je een eigen tempo kan bepalen.
                                 Wil je sneller? Dat kan altijd!. Wil je liever iets vertragen? Ook geen probleem. </p>
                         </div>
                     </div>
@@ -320,7 +337,7 @@
             <div class="col-12 col-md-10 offset-md-1">
                 <div class="footer__inner">
                     <a href="/" class="footer__logo"><img src="images/logo.svg" alt="Logo"
-                                                                   class="footer__logo-img"></a>
+                                                          class="footer__logo-img"></a>
                     <div class="footer__info">
                         <div class="footer__info-group">
                             <h4 class="mb-3">Adres</h4>
