--- a/manifest.html
+++ b/manifest.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./favicon.ico" sizes="16x16" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" sizes="16x16" type="image/x-icon">
 
-    <script src="js/fontawesome.js" ></script>
+    <script src="js/fontawesome.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -21,26 +21,38 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157814288-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
-        gtag('config', 'UA-157814288-1',  { 'anonymize_ip': true });
+        gtag('config', 'UA-157814288-1', {'anonymize_ip': true});
     </script>
 
     <!-- Hotjar Tracking Code for www.bit-academy.nl -->
     <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:1680339,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {hjid: 1680339, hjsv: 6};
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
             a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
 </head>
 
 <body>
+<div class="looking-for-bit">
+    <p>Looking for Bit? <br/><img src="images/arrow.png" alt=""></p>
+
+    <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
+</div>
 
 <header class="header">
     <div class="container">
@@ -87,82 +99,94 @@
     </div>
 </header>
 
-    <main class="container">
-        <div class="row">
-            <div class="col-12 col-md-10 offset-md-1">
-                <section class="manifest">
-                    <div class="row mb-5">
-                        <div class="col-12">
-                            <h1 class="mb-5 mb-md-4 u-hyphens">Manifest</h1>
-                        </div>
+<main class="container">
+    <div class="row">
+        <div class="col-12 col-md-10 offset-md-1">
+            <section class="manifest">
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <h1 class="mb-5 mb-md-4 u-hyphens">Manifest</h1>
                     </div>
-                    <div class="row">
-                        <div class="col-12 col-md-4 manifest__item">
-                            <div class="manifest__item-media">
-                                <img src="images/i-autonomy.svg" alt="Icon">
-                            </div>
-                            <h3 class="mb-2 mt-3">Autonomie</h3>
-                            <p>Verantwoordelijk voor je eigen keuzes en je eigen ontwikkeling. Wij schetsen de kaders en jij mag zelf de invulling bepalen. Werk je bijvoorbeeld een project
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4 manifest__item">
+                        <div class="manifest__item-media">
+                            <img src="images/i-autonomy.svg" alt="Icon">
+                        </div>
+                        <h3 class="mb-2 mt-3">Autonomie</h3>
+                        <p>Verantwoordelijk voor je eigen keuzes en je eigen ontwikkeling. Wij schetsen de kaders en jij
+                            mag zelf de invulling bepalen. Werk je bijvoorbeeld een project
                             liever uit in C# dan PHP? Graag zelfs! </p>
+                    </div>
+                    <div class="col-12 col-md-4 manifest__item">
+                        <div class="manifest__item-media">
+                            <img src="images/i-learn-doing.svg" alt="Icon">
                         </div>
-                        <div class="col-12 col-md-4 manifest__item">
-                            <div class="manifest__item-media">
-                                <img src="images/i-learn-doing.svg" alt="Icon">
-                            </div>
-                            <h3 class="mb-2 mt-3">Learning by doing</h3>
-                            <p>Goed worden in programmeren? Dan moet je het heel veel doen! Bij ons ben je daarom de hele dag bezig met coderen. Alleen zo word je een programmeur. </p>
+                        <h3 class="mb-2 mt-3">Learning by doing</h3>
+                        <p>Goed worden in programmeren? Dan moet je het heel veel doen! Bij ons ben je daarom de hele
+                            dag bezig met coderen. Alleen zo word je een programmeur. </p>
+                    </div>
+                    <div class="col-12 col-md-4 manifest__item">
+                        <div class="manifest__item-media">
+                            <img src="images/i-peer-peer.svg" alt="Icon">
                         </div>
-                        <div class="col-12 col-md-4 manifest__item">
-                            <div class="manifest__item-media">
-                                <img src="images/i-peer-peer.svg" alt="Icon">
-                            </div>
-                            <h3 class="mb-2 mt-3">Bedrijfsleven</h3>
-                            <p>Aansluiting bij het bedrijfslevens staat centraal, daarom hebben we coaches uit het werkveld en doen we echte projecten. Zo leer je de vaardigheden waarmee je direct een de slag kan. </p>
+                        <h3 class="mb-2 mt-3">Bedrijfsleven</h3>
+                        <p>Aansluiting bij het bedrijfslevens staat centraal, daarom hebben we coaches uit het werkveld
+                            en doen we echte projecten. Zo leer je de vaardigheden waarmee je direct een de slag
+                            kan. </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-10 offset-md-1 manifest__img">
+                        <img src="images/manifest.jpg" alt="Man sitting on a container using a laptop" class="w-100">
+                        <div class="manifest__img-dots">
+                            <img src="images/manifest-dots.svg" alt="Dots">
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-12 col-md-10 offset-md-1 manifest__img">
-                            <img src="images/manifest.jpg" alt="Man sitting on a container using a laptop" class="w-100">
-                            <div class="manifest__img-dots">
-                                <img src="images/manifest-dots.svg" alt="Dots">
-                            </div>
-                        </div>
+                </div>
+                <div class="row mb-5 pb-5">
+                    <div class="col-12 mb-3 mb-md-2">
+                        <h3>Bit x Bit Academy</h3>
                     </div>
-                    <div class="row mb-5 pb-5">
-                        <div class="col-12 mb-3 mb-md-2">
-                            <h3>Bit x Bit Academy</h3>
-                        </div>
-                        <div class="col-12 col-md-6 mb-3 mb-md-0">
-                            <p>De Bit Academy is een onderdeel van Bit. Bit is een research en prototyping studio gerund door 50 jonge tech talenten. Bit's missie: <i>to fast-forward the impact of emerging tech</i>.
-                            Bit bouwt de toekomst met prototypes van hardware, software en AI. Dit doen ze voor een aantal toonaangevende bedrijven zoals ING, Heineken, Louwman en de NS.</p>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <p>Tussen Bit en de Bit Academy wordt intens samengewerkt. Bit is actief met de laatste technologieën en deze kennis gebruiken wij vervolgens bij de Bit Academy om de studenten
-                                te laten werken met cutting-edge technieken. Daarom is tech bij ons geen geschiedenisles, maar vooruitkijken naar de toekomst.  </p>
-                        </div>
+                    <div class="col-12 col-md-6 mb-3 mb-md-0">
+                        <p>De Bit Academy is een onderdeel van Bit. Bit is een research en prototyping studio gerund
+                            door 50 jonge tech talenten. Bit's missie: <i>to fast-forward the impact of emerging
+                                tech</i>.
+                            Bit bouwt de toekomst met prototypes van hardware, software en AI. Dit doen ze voor een
+                            aantal toonaangevende bedrijven zoals ING, Heineken, Louwman en de NS.</p>
                     </div>
-                    <div class="row pt-5">
-                        <div class="col-12 mb-4">
-                            <h2 class="h2--xl">Kies je eigen pad</h2>
-                        </div>
-                        <div class="col-12 col-md-8 col-lg-6 mb-5 mb-md-0">
-                            <p>Binnen ons vakgebied zijn er veel specialisaties, en iedere programmeur heeft zijn of haar voorkeur. Verplicht technieken moeten leren
-                            waarvan je weet dat je er toch niets mee gaat doen is zonde van de tijd en energie. Bij ons kan je daarom je eigen pad kiezen en precies de onderwerpen kiezen die jij
+                    <div class="col-12 col-md-6">
+                        <p>Tussen Bit en de Bit Academy wordt intens samengewerkt. Bit is actief met de laatste
+                            technologieën en deze kennis gebruiken wij vervolgens bij de Bit Academy om de studenten
+                            te laten werken met cutting-edge technieken. Daarom is tech bij ons geen geschiedenisles,
+                            maar vooruitkijken naar de toekomst. </p>
+                    </div>
+                </div>
+                <div class="row pt-5">
+                    <div class="col-12 mb-4">
+                        <h2 class="h2--xl">Kies je eigen pad</h2>
+                    </div>
+                    <div class="col-12 col-md-8 col-lg-6 mb-5 mb-md-0">
+                        <p>Binnen ons vakgebied zijn er veel specialisaties, en iedere programmeur heeft zijn of haar
+                            voorkeur. Verplicht technieken moeten leren
+                            waarvan je weet dat je er toch niets mee gaat doen is zonde van de tijd en energie. Bij ons
+                            kan je daarom je eigen pad kiezen en precies de onderwerpen kiezen die jij
                             leuk vindt om te leren*. </p>
-                        </div>
-                        <div class="col-12 col-md-10 offset-md-2 col-lg-8 offset-lg-4">
-                            <img src="images/services.png" alt="Services" class="w-100">
-                        </div>
                     </div>
-                    <div class="row pt-5">
-                        <div class="col-12 col-md-8 col-lg-6 mb-5 mb-md-0">
-                            <p>* = omdat je een MBO opleiding gaat volgen zijn vakken als Nederlands, Engels en Rekenen verplicht</p>
-                        </div>
+                    <div class="col-12 col-md-10 offset-md-2 col-lg-8 offset-lg-4">
+                        <img src="images/services.png" alt="Services" class="w-100">
                     </div>
-                </section>
-            </div>
+                </div>
+                <div class="row pt-5">
+                    <div class="col-12 col-md-8 col-lg-6 mb-5 mb-md-0">
+                        <p>* = omdat je een MBO opleiding gaat volgen zijn vakken als Nederlands, Engels en Rekenen
+                            verplicht</p>
+                    </div>
+                </div>
+            </section>
         </div>
-    </main>
+    </div>
+</main>
 
 <footer class="footer">
     <div class="container">
