--- a/programma.html
+++ b/programma.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./favicon.ico" sizes="16x16" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" sizes="16x16" type="image/x-icon">
 
-    <script src="js/fontawesome.js" ></script>
+    <script src="js/fontawesome.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -21,26 +21,39 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157814288-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
-        gtag('config', 'UA-157814288-1',  { 'anonymize_ip': true });
+        gtag('config', 'UA-157814288-1', {'anonymize_ip': true});
     </script>
 
     <!-- Hotjar Tracking Code for www.bit-academy.nl -->
     <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:1680339,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {hjid: 1680339, hjsv: 6};
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
             a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
 </head>
 
 <body>
+<div class="looking-for-bit">
+    <p>Looking for Bit? <br/><img src="images/arrow.png" alt=""></p>
+
+    <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
+</div>
+
 <header class="header">
     <div class="container">
         <div class="row">
@@ -86,47 +99,60 @@
     </div>
 </header>
 
-    <main class="container">
-        <div class="row">
-            <div class="col-12 col-md-10 offset-md-1">
-                <section class="programme">
-                    <div class="row mb-5 pb-5">
-                        <div class="col-12">
-                            <h1 class="mb-5 mb-md-4 u-hyphens">Programma</h1>
-                        </div>
-                        <div class="col-12 col-md-10 col-lg-9 col-xl-8">
-                            <p>Het programma van de Bit Academy bestaat uit allemaal verschillende modules waar je op een eigen tempo doorheen kan. Zo kan je bijvoorbeeld kiezen of je wilt beginnen met PHP, Git of HTML/CSS. Sommige exercises
-                            moet je zelfstandig maken, anderen met een team. Bij elke module leer je nieuwe vaardigheden, zodat je uiteindelijk een complete programmeur wordt. </p>
-                        </div>
+<main class="container">
+    <div class="row">
+        <div class="col-12 col-md-10 offset-md-1">
+            <section class="programme">
+                <div class="row mb-5 pb-5">
+                    <div class="col-12">
+                        <h1 class="mb-5 mb-md-4 u-hyphens">Programma</h1>
                     </div>
-                    <div class="row programme__main">
-                        <div class="col-12">
-                            <img src="images/programme-1.svg" alt="Programma" class="programme__main-img--1">
-                            <div class="programme__box">
-                                <h2 class="h2--lg mb-4">The fundamentals</h2>
-                                <p>Als je op het reguliere tempo door de opleiding gaat is na `Project 3` het eerste jaar afgelopen. Als we
-                                terug kijken naar het afgelopen jaar heb je al gigantisch veel geleerd: PHP, Git, HTML/CSS, Javascript, Scrum, Databases, feedback geven en communiceren met een klant. </p>
-                            </div>
-                            <img src="images/programme-2.svg" alt="Programma" class="programme__main-img--2">
-                            <div class="programme__box">
-                                <h2 class="h2--lg mb-4">Advanced</h2>
-                                <p>Dit jaar ben je begonnen met je stage. 20 weken meedraaien in een echte organistie. Je vaardigheden zijn aangescherpt tijdens je stage. Je hebt 1 dag per maand op onze locatie gewerkt aan je softskills.
-                                    Daarnaast ben je bezig geweest met geavanceerde programmeer onderwerpen zoals Object Oriented Programming, Security en Testing. Het jaar sluit je af met een project
+                    <div class="col-12 col-md-10 col-lg-9 col-xl-8">
+                        <p>Het programma van de Bit Academy bestaat uit allemaal verschillende modules waar je op een
+                            eigen tempo doorheen kan. Zo kan je bijvoorbeeld kiezen of je wilt beginnen met PHP, Git of
+                            HTML/CSS. Sommige exercises
+                            moet je zelfstandig maken, anderen met een team. Bij elke module leer je nieuwe
+                            vaardigheden, zodat je uiteindelijk een complete programmeur wordt. </p>
+                    </div>
+                </div>
+                <div class="row programme__main">
+                    <div class="col-12">
+                        <img src="images/programme-1.svg" alt="Programma" class="programme__main-img--1">
+                        <div class="programme__box">
+                            <h2 class="h2--lg mb-4">The fundamentals</h2>
+                            <p>Als je op het reguliere tempo door de opleiding gaat is na `Project 3` het eerste jaar
+                                afgelopen. Als we
+                                terug kijken naar het afgelopen jaar heb je al gigantisch veel geleerd: PHP, Git,
+                                HTML/CSS, Javascript, Scrum, Databases, feedback geven en communiceren met een
+                                klant. </p>
+                        </div>
+                        <img src="images/programme-2.svg" alt="Programma" class="programme__main-img--2">
+                        <div class="programme__box">
+                            <h2 class="h2--lg mb-4">Advanced</h2>
+                            <p>Dit jaar ben je begonnen met je stage. 20 weken meedraaien in een echte organistie. Je
+                                vaardigheden zijn aangescherpt tijdens je stage. Je hebt 1 dag per maand op onze locatie
+                                gewerkt aan je softskills.
+                                Daarnaast ben je bezig geweest met geavanceerde programmeer onderwerpen zoals Object
+                                Oriented Programming, Security en Testing. Het jaar sluit je af met een project
                                 van 8 weken voor een externe opdrachtgever.</p>
-                            </div>
-                            <img src="images/programme-3.svg" alt="Programma" class="programme__main-img--3">
-                            <div class="programme__box">
-                                <h2 class="h2--lg mb-4">Done!</h2>
-                                <p>En dan ben je alweer afgestudeerd! <br/><br/>In jaar 3 heb je gekozen voor de track 'Embedded design' waarin je op een Arduino je eigen Tamagotchi moest bouwen of voor 'Game Development', waarin
-                                je de eerste stappen hebt gezet om de volgende Fortnite of Pokemon te bouwen. Je hebt je eindexamens gemaakt en als afsluiting op je school carrière 20 weken stage gelopen. <br/><br/>Je kunt met zelfvertrouwens
+                        </div>
+                        <img src="images/programme-3.svg" alt="Programma" class="programme__main-img--3">
+                        <div class="programme__box">
+                            <h2 class="h2--lg mb-4">Done!</h2>
+                            <p>En dan ben je alweer afgestudeerd! <br/><br/>In jaar 3 heb je gekozen voor de track
+                                'Embedded design' waarin je op een Arduino je eigen Tamagotchi moest bouwen of voor
+                                'Game Development', waarin
+                                je de eerste stappen hebt gezet om de volgende Fortnite of Pokemon te bouwen. Je hebt je
+                                eindexamens gemaakt en als afsluiting op je school carrière 20 weken stage gelopen.
+                                <br/><br/>Je kunt met zelfvertrouwens
                                 starten bij je eerste baan of doorstuderen aan het HBO.</p>
-                            </div>
                         </div>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
         </div>
-    </main>
+    </div>
+</main>
 
 <footer class="footer">
     <div class="container">
