Added scrolling title

--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
         <div class="col-12 col-md-10 offset-md-1">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="mb-5 mb-md-4 u-hyphens">Prototyping<br>tech innovators</h1>
+                    <h1 class="mb-5 mb-md-4 u-hyphens">We develop future<br/>
+                        <span
+                                class="txt-rotate"
+                                data-rotate='[ "engineers.", "game developers.", "team players.", "innovators."]'>&nbsp;</span>
+                    </h1>
                 </div>
             </div>
             <div class="row">
