--- a/tech-talks.html
+++ b/tech-talks.html
@@ -102,7 +102,7 @@
 <main class="container">
     <div class="row">
         <div class="col-12 col-md-10 offset-md-1">
-            <section class="programme">
+            <section class="tech-talks">
                 <div class="row mb-5 pb-5">
                     <div class="col-12 col-md-10 col-lg-9 col-xl-8">
                         <h1 class="mb-5 mb-md-4 u-hyphens">Tech Talks</h1>
@@ -125,7 +125,7 @@
             </section>
         </div>
     </div>
-    <div class="row">
+    <div class="row tech-talks"">
         <div class="col-12 col-md-10 offset-md-1">
             <h2 class="mb-5 mb-md-4 u-hyphens">FAQ</h2>
             <div class="accordion" id="accordionExample">
