Updated text on homepage

--- a/index.html
+++ b/index.html
@@ -111,13 +111,8 @@
         <div class="row">
             <div class="col-12 col-md-6 order-md-2 mb-5 mb-md-0">
                 <p>
-                    Welkom bij de Bit Academy. .. Hier iets over wat de bit academy nou bijzonder voor JOU maakt ...
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ea ex explicabo nam possimus
-                    ratione voluptate? Asperiores beatae debitis ipsa itaque maiores natus nobis odio quasi, quia
-                    reiciendis, sequi tenetur.
+                    Binnen 3 jaar een volwaardig MBO diploma als software developer, werken met de nieuwste technology en zelf je studie richting kiezen. Leren door zelf actief bezig te zijn in plaats van klassieke lessen volgen. Of je nu Webdeveloper, Game Developer of Embedded System Engineer wilt worden, je kan het bij de Bit Academy.
                 </p>
-                <p class="pt-4">...shoutout... Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse fugit in
-                    nam quam sit. Assumenda at consequuntur doloremque explicabo, </p>
             </div>
         </div>
         <div class="row">
