Added mailchimp popup

--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
         <div class="row">
             <div class="col-12 col-md-6 order-md-2 mb-5 mb-md-0">
                 <p>
-                    Binnen 3 jaar een volwaardig MBO diploma als software developer, werken met de nieuwste technology en zelf je studie richting kiezen. Leren door zelf actief bezig te zijn in plaats van klassieke lessen volgen. Of je nu Webdeveloper, Game Developer of Embedded System Engineer wilt worden, je kan het bij de Bit Academy.
+                    Binnen 3 jaar een volwaardig MBO diploma als software developer, werken met de nieuwste technology
+                    en zelf je studie richting kiezen. Leren door zelf actief bezig te zijn in plaats van klassieke
+                    lessen volgen. Of je nu Webdeveloper, Game Developer of Embedded System Engineer wilt worden, je kan
+                    het bij de Bit Academy.
                 </p>
             </div>
         </div>
@@ -140,7 +143,8 @@
                 <div class="paths">
                     <a class="blue" onmouseenter="activate('web')" onclick="activate('web')">Web Developer</a>
                     <a class="red" onmouseenter="activate('game')" onclick="activate('game')">Game Developer</a>
-                    <a class="dark-blue" onmouseenter="activate('embedded')" onclick="activate('embedded')">Embedded Engineer</a>
+                    <a class="dark-blue" onmouseenter="activate('embedded')" onclick="activate('embedded')">Embedded
+                        Engineer</a>
                 </div>
             </div>
             <div class="col-12 col-md-6">
@@ -400,7 +404,16 @@
 <script src="js/jquery-2.2.4.min.js"></script>
 <script src="js/app.js"></script>
 
-
+<script type="text/javascript" src="https://downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
+        data-dojo-config="usePlainJson: true, isDebug: false"></script>
+<script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function (L) {
+    L.start({
+        "baseUrl": "mc.us8.list-manage.com",
+        "uuid": "a65d55f802ec2105da14e33fc",
+        "lid": "d8d2c9b5ee",
+        "uniqueMethods": true
+    })
+})</script>
 </body>
 
 </html>
